# fast-api-course

./: .gitignore  Makefile  README.md  alembic.ini  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  testdb.db  todos.db
admin/: router.py
alembic/: env.py
alembic/versions/: 74274fa5bc54_initial_migration.py
auth/: api.py  router.py
book/: api.py  models.py  router.py
tests/: test_main.py  test_todos.py
todo/: api.py  models.py  router.py
