[tool.poetry]
name = "fast-api-course"
version = "1.0.0"
description = "A little application with fast api in python"
authors = ["ajsobrino <ajsobrino700@gmial.com>"]
readme = "README.md"
packages = [{include = "fast_api_course"}]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"
python-jose = "^3.5.0"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
